2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* MArrayN.cc (MArrayN::idx_add): New methods.
	* MArrayN.h: Declare them.
	* MArray.cc, MArray.h: Remove from here.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::safe_numel): New method.
	* Array.h (Array<T>::Array (const dim_vector&),
	Array<T>::Array (const dim_vector&, const T&),
	Array<T>::Array (T *, const dim_vector&)): Use it here.
	* Array.cc (Array<T>::clear (const dim_vector&)): Also here.
	(Array<T>::get_size): Remove.
	* Array2.h (Array2::get_size): Remove.
	* Array3.h (Array3::get_size): Remove.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array::clear (const dim_vector&)): Use get_size.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.cc (do_erfinv): New static function.
	(erfinv (double), erfinv (float)): New mappers.
	* lo-mappers.h: Declare them.

2009-11-18  David Grundberg  <davidg@cs.umu.se>

       * str-vec.cc (string_vector::list_in_columns): Avoid crash on
       empty arguments from list_in_columns.

2009-11-18  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.h (read_sparse_matrix): Fix order of tests and reads. 

2009-11-18  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (mx_inline_any_negative, mx_inline_pow): New loops.
	(DEFMXMAPPER2X): New macro.
	* bsxfun-decl.h (BSXFUN_OP2_DECL): New macro.
	* bsxfun-defs.cc (BSXFUN_OP2_DEF, BSXFUN_OP2_DEF_MXLOOP): New macros.
	(do_bsxfun_op): Use OCTAVE_QUIT.
	* dNDArray.cc (NDArray::all_integers (void)): New method.
	(NDArray::any_element_is_negative): Use mx_inline_any_negative.
	(bsxfun_pow (const NDArray&, const NDArray&),
	bsxfun_pow (const ComplexNDArray&, const NDArray&)): New functions.
	* dNDArray.h: Update.
	* fNDArray.cc (FloatNDArray::all_integers (void)): New method.
	(FloatNDArray::any_element_is_negative): Use mx_inline_any_negative.
	(bsxfun_pow (const FloatNDArray&, const FloatNDArray&),